# ucp-demo

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
backend/: __init__.py  main.py
backend/business/: __init__.py  catalog.py  checkout.py  discovery.py  server.py
backend/platform/: __init__.py  agent.py  chat.py  ucp_client.py
backend/schemas/: __init__.py  checkout.py  discovery.py  payment.py  ucp.py
backend/visualizer/: __init__.py  events.py  websocket.py
docs/: UCP_OVERVIEW.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Chat/: AgentThinking.tsx  Chat.tsx  CheckoutCard.tsx
frontend/src/components/FlowDiagram/: FlowDiagram.tsx  index.ts
frontend/src/components/Inspector/: Inspector.tsx
frontend/src/components/Learn/: Learn.tsx
frontend/src/components/Visualizer/: Visualizer.tsx
frontend/src/hooks/: useChat.ts  useWebSocket.ts
frontend/src/types/: ucp.ts
scripts/: run_demo.sh  setup.sh
tests/: __init__.py  test_api.py  test_catalog.py  test_schemas.py
